# rucat

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml
.github/workflows/: Build.yml  ci-make.yaml  ci.yaml  manual-build.yaml  release.yaml
assets/completions/bash/: rucat
assets/completions/fish/: rucat.fish
assets/completions/zsh/: _rucat
assets/man/: rucat.1
docs/: development.md
rucat/: Cargo.toml
src/: cli.rs  clipboard.rs  lib.rs  main.rs
src/formatters/: ansi.rs  ascii.rs  markdown.rs  mod.rs  pretty.rs  utf8.rs  xml.rs
tests/: cli.rs  cli_null.rs  cli_trailing_args.rs  clipboard.rs  formatter_units.rs  markdown.rs
tests/snapshots/: lib.rs.ascii.snapshot  lib.rs.md.snapshot
