[package]
name = "rucat"
version = "0.1.0"
edition = "2021"

[lib]
name = "rucat"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
anyhow = "1.0"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"         # spawn compiled binary
predicates = { version = "3", features = ["diff"] }
tempfile    = "3"
