[package]
name = "rucat"
version = "0.1.0"
description = "A modern, feature-rich replacement for the classic `cat` utility, written in Rust."
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"

[lib]
name = "rucat"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
anyhow = "1.0"
walkdir = "2"
regex = "1.11.1"
once_cell = "1.21.3"
syntect = { version = "5.2.0", features = ["default-fancy"] }

[dependencies.dirs]
version = "5.0"
[dependencies.toml]
version = "0.8"
[dev-dependencies]
assert_cmd = "2"         # spawn compiled binary
predicates = { version = "3", features = ["diff"] }
tempfile    = "3"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2.29"

[package.metadata.deb]
maintainer = "Brian 'redbeard' Harrington <redbeard@dead-city.org>"
copyright = "2025, Brian 'redbeard' Harrington <redbeard@dead-city.org>"
license-file = ["LICENSE", "4"]
changelog = "CHANGELOG.md"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rucat", "usr/bin/", "755"],
    ["assets/man/rucat.1", "usr/share/man/man1/", "644"],
    ["assets/completions/bash/rucat", "usr/share/bash-completion/completions/", "644"],
    ["assets/completions/zsh/_rucat", "usr/share/zsh/site-functions/", "644"],
    ["assets/completions/fish/rucat.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["README.md", "usr/share/doc/rucat/", "644"],
]
