[package]
name = "rucat"
version = "0.2.0"
authors = ["Brian 'redbeard' Harrington <redbeard@dead-city.org>"]
edition = "2024"
description = "rucat is 'cat' reborn for the era of LLMs. A critical tool for every prompt engineer."
categories = ["command-line-utilities", "development-tools", "science::ai", "text-processing"]
keywords = ["ai", "cat", "cli", "context", "formatter", "llm", "prompt", "syntax-highlighting", "utility"]
readme = "README.md"
repository = "https://github.com/brianredbeard/rucat"
license = "GPL-3.0-or-later"

[package.metadata.deb]
maintainer = "Brian 'redbeard' Harrington <redbeard@dead-city.org>"
copyright = "2024, Brian 'redbeard' Harrington <redbeard@dead-city.org>"
license-file = ["LICENSE", "4"]
changelog = "CHANGELOG.md"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rucat", "usr/bin/", "755"],
    ["assets/man/rucat.1", "usr/share/man/man1/", "644"],
    ["assets/completions/bash/rucat", "usr/share/bash-completion/completions/", "644"],
    ["assets/completions/zsh/_rucat", "usr/share/zsh/site-functions/", "644"],
    ["assets/completions/fish/rucat.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["README.md", "usr/share/doc/rucat/", "644"],
]

[lib]
name = "rucat"
path = "src/lib.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clipboard = []
basic = []
full = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
anyhow = "1.0"
walkdir = "2"
regex = "1.11.1"
syntect = { version = "5.2.0", features = ["default-fancy"] }
base64 = "0.22"

[dependencies.dirs]
version = "6.0"
[dependencies.toml]
version = "0.9"
[dev-dependencies]
assert_cmd = "2"         # spawn compiled binary
predicates = { version = "3", features = ["diff"] }
tempfile    = "3"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2.29"
